# doc/api.yaml
@@ -143,7 +143,7 @@ paths:
           description: |
             error, user not found 
         "500": { description: failed to unfollow this user }
-  /users/{username}/ban/{otherUsername}:
+  /users/{username}/banned/{otherUsername}:
     parameters:
       - $ref: "#/components/parameters/Username"
       - $ref: "#/components/parameters/OtherUsername"
@@ -155,16 +155,8 @@ paths:
       operationId: banUser
       summary: bans user 
       description: allows user to ban others
-      requestBody:  
-        content:
-          application/json:
-            schema: { $ref: "#/components/schemas/Username" } 
       responses:
-        "201": 
-          description: user banned successfully
-          content:
-            application/json:
-              schema: { $ref: "#/components/schemas/Username" } 
+        "201": { description: user banned successfully }
         "404": { description: user not found }
         "500": { description: failed to ban user }
     delete:
@@ -179,7 +171,9 @@ paths:
         "204": { description: user unbanned successfully }
         "404": { description: error; user not found }
         "500": { description: failed to unban user }
-  /photos/:
+  /users/{username}/photos/:
+    parameters:
+      - $ref: "#/components/parameters/Username"
     post:
       tags: 
         - Photos
@@ -194,7 +188,8 @@ paths:
         content:
           image/png:
             schema:
-              $ref: "#/components/schemas/Photo"        
+              $ref: "#/components/schemas/Photo"
+        required: true
       responses:
         "201":
           description: photo uploaded successfully
@@ -205,8 +200,9 @@ paths:
         "500": 
           description: |
             an error occured please try again later 
-  /photos/{photoId}:
+  /users/{username}/photos/{photoId}:
     parameters:
+      - $ref: "#/components/parameters/Username"
       - $ref: "#/components/parameters/PhotoId"
     delete:
       tags: 
@@ -222,10 +218,11 @@ paths:
         "500":  
           description: |
             an error occured, please try again later 
-  /photos/{photoId}/likes/{username}:
+  /users/{username}/photos/{photoId}/likes/{otherUsername}:
     parameters:
-      - $ref: "#/components/parameters/PhotoId"
       - $ref: "#/components/parameters/Username"
+      - $ref: "#/components/parameters/PhotoId"
+      - $ref: "#/components/parameters/OtherUsername"
     put:
       tags: 
         - Likes
@@ -262,8 +259,9 @@ paths:
         "500": 
           description: |
             an error occured, please retry later 
-  /photos/{photoId}/comments:
+  /users/{username}/photos/{photoId}/comments:
     parameters:
+      - $ref: "#c/components/parameters/Username"
       - $ref: "#/components/parameters/PhotoId"
     post:
       tags: 
@@ -290,8 +288,9 @@ paths:
         "500":  
           description: |
             an error occured, please retry later 
-  /photos/{photoId}/comments/{commentId}:
+  /users/{username}/photos/{photoId}/comments/{commentId}:
     parameters:
+      - $ref: "#/components/parameters/Username"
       - $ref: "#/components/parameters/PhotoId"
       - $ref: "#/components/parameters/CommentId"
     delete:
@@ -345,11 +344,15 @@ components:
     Username: 
       title: Username
       description: username of user 
-      type: string 
-      pattern: '^([a-z0-9._-])\w+$'
-      minLength: 5
-      maxLength: 15
-      example: maria77
+      type: object
+      properties:
+        username:
+          description: string between 5 and 15 characters
+          type: string 
+          pattern: '^([a-z0-9._-])\w+$'
+          minLength: 5
+          maxLength: 15
+          example: maria77
     Photo:
       title: Photo
       description: | 
@@ -361,6 +364,9 @@ components:
           description: id of a photo
           type: number
           example: 10097
+        owner:
+          description: username of user that uploaded the photo
+          $ref: "#/components/schemas/Username"
         photo:  
           description: represents the single picture  
           type: string 
