# service/api/unbanUser.go
@@ -1,0 +1,31 @@
+package api
+
+// DONE
+
+import (
+	"errors"
+	"net/http"
+
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
+	"github.com/julienschmidt/httprouter"
+)
+
+func (rt *_router) unbanUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	// get both current user and user to unban from query
+	username := r.URL.Query().Get("username")
+	otherUsername := r.URL.Query().Get("otherUsername")
+
+	// do operation on database
+	err := rt.db.UnbanUser(username, otherUsername)
+
+	// check for errors and handle them
+	if errors.Is(err, database.ErrUserDoesNotExist) {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	} else if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+}
