# service/api/unfollowUser.go
@@ -1,0 +1,31 @@
+package api
+
+import (
+	"errors"
+	"net/http"
+
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/database"
+	"github.com/julienschmidt/httprouter"
+)
+
+func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	// get both current user and user to unfollow from query
+	username := ps.ByName("username")
+	otherUsername := ps.ByName("otherUsername")
+
+	// do operation on database
+	err := rt.db.UnfollowUser(username, otherUsername)
+
+	// check for errors and handle them
+	if errors.Is(err, database.ErrUserDoesNotExist) {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	} else if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	// action performed
+	w.WriteHeader(http.StatusNoContent)
+}
